--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div>
+        <img src="Logo_Black.png">
+    </div>
 </body>
 </HTML>
