--- a/about.html
+++ b/about.html
@@ -47,10 +47,10 @@
     
           <nav id="navbar" class="navbar">
             <ul>
-              <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-              <li><a class="nav-link scrollto" href="about.html">About</a></li>
+              <li><a class="nav-link scrollto" href="index.html">Home</a></li>
+              <li><a class="nav-link scrollto active" href="about.html">About</a></li>
               <!--<li><a class="nav-link scrollto" href="#services">Services</a></li>-->
-              <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
+              <li><a class="nav-link scrollto" href="portfolio.html">Portfolio</a></li>
               <li><a class="nav-link scrollto" href="team.html">Team</a></li>
               <!--<li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
               <li><a class="nav-link scrollto" href="#contact">Contact</a></li>-->
@@ -69,11 +69,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Inner Page</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Team</li>
-          </ol>
+          <h2>About Us</h2>
         </div>
 
       </div>
