--- a/team.html
+++ b/team.html
@@ -47,11 +47,11 @@
     
           <nav id="navbar" class="navbar">
             <ul>
-              <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+              <li><a class="nav-link scrollto" href="index.html">Home</a></li>
               <li><a class="nav-link scrollto" href="about.html">About</a></li>
               <!--<li><a class="nav-link scrollto" href="#services">Services</a></li>-->
-              <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
-              <li><a class="nav-link scrollto" href="team.html">Team</a></li>
+              <li><a class="nav-link scrollto" href="portfolio.html">Portfolio</a></li>
+              <li><a class="nav-link scrollto active" href="team.html">Team</a></li>
               <!--<li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
               <li><a class="nav-link scrollto" href="#contact">Contact</a></li>-->
             </ul>
@@ -69,11 +69,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Inner Page</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Team</li>
-          </ol>
+          <h2>Team</h2>
         </div>
 
       </div>
@@ -85,7 +81,6 @@
 
       <div class="section-title" data-aos="fade-up">
         <h2>Team</h2>
-        <p>Our team consists of experts in diverse fields of technology</p>
       </div>
 
       <div class="row">
