--- a/about.html
+++ b/about.html
@@ -92,18 +92,14 @@
         </div>
         <div class="col-lg-6" data-aos="fade-left">
           <div class="content pt-4 pt-lg-0 pl-0 pl-lg-3 ">
-            <h3>We create solutions for the Web3 landscape</h3>
-            <p class="fst-italic">
-              Milian Digital is committed to creating innovative solutions for Web3's biggest problems
-            </p>
-            <ul>
-              <li><i class="bx bx-check-double"></i> Connecting DAOs to holders</li>
-              <li><i class="bx bx-check-double"></i> Creating token gated solutions to engagement</li>
-              <li><i class="bx bx-check-double"></i> Building tools to help the peer-to-peer economy</li>
-            </ul>
-            <p>
-              We help holders and builders with tools to navigate Web3 and more effectively engage with the communities they create, support, and belong to.
-            </p>
+            <h3>The BOND Ecosystem</h3>
+            Our BOND applications enable users and communities to separate the signal from noise, build out networks efficiently, and capture value that was previously unavailable to them. We leverage digital identities and proof of ownership to empower users and help them get the most out of the web3 space.
+            <p></p>
+            <p>🔗Schedule.Bond- A token-gated scheduling application that lets the user own their time</p>
+
+            <p>🔗Msg.Bond - Token-gated messaging that delivers value to users in exchange for their presence</p>
+
+            <p>🔗Item.Bond - A marketplace platform that lets sellers direct purchases of products based upon on-chain asset ownership</p>
           </div>
         </div>
       </div>
