--- a/index.html
+++ b/index.html
@@ -38,34 +38,12 @@
 <body>
 
     <!-- ======= Header ======= -->
-    <header id="header" class="d-flex align-items-center">
-      <div class="container d-flex align-items-center justify-content-between">
-  
-        <div class="logo">
-          <a href="index.html"><img src="assets/img/hero-logo.png" alt="" class="img-fluid"></a>
-        </div>
-  
-        <nav id="navbar" class="navbar">
-          <ul>
-            <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-            <li><a class="nav-link scrollto" href="about.html">About</a></li>
-            <!--<li><a class="nav-link scrollto" href="#services">Services</a></li>-->
-            <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
-            <li><a class="nav-link scrollto" href="team.html">Team</a></li>
-            <!--<li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
-            <li><a class="nav-link scrollto" href="#contact">Contact</a></li>-->
-          </ul>
-          <i class="bi bi-list mobile-nav-toggle"></i>
-        </nav><!-- .navbar -->
-  
-      </div>
-    </header><!-- End Header -->
+
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/hero-logo.png" alt=""></a>
+      <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/milian.svg" alt=""></a>
       <h1 data-aos="zoom-in">Milian Digital</h1>
-      <h2 data-aos="fade-up">Redefining the Digital World</h2>
       <!--<a data-aos="fade-up" data-aos-delay="200" href="#about" class="btn-get-started scrollto"></a> -->
     </div>
   </section><!-- End Hero -->
